Fixed overflow new

--- a/css/media-query.css
+++ b/css/media-query.css
@@ -10,14 +10,6 @@
     }
 }
 
-@media screen and (min-width: 280px) {
-    *{
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-}
-
 @media screen and (max-width:768px) {
     *{
         margin: 0;
@@ -163,6 +155,7 @@
 
     .skills-section table tr td{
         display: flex;
+        width: 100%;
         justify-content: center;
         align-items: center;
     }
